--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
-   background-color: #ee3e80;
+   /* background-color: #ee3e80; */
+   background-color: black;
 }
 body{
    font-family: cursive;
