--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
    /* background-color: #ee3e80; */
    background-color: black;
    color:white;
-   
+
+}
+#img{
+   background-color:white;
+   opacity: 0.5;
 }
 body{
    font-family: cursive;
