--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *{
    /* background-color: #ee3e80; */
-   background-color: black;
-   color:white;
+   background-color: #001f3f;
+   color: #0074D9;
 
 }
 #img{
-   background-color:white;
+   background-color:#39CCCC;
 }
 body{
-   font-family: cursive;
+   font-family: serif;
 
 }
