--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 *{
    /* background-color: #ee3e80; */
-   background-color: #001f3f;
+   background-color: #FF4136;
    color: #0074D9;
 
-}
-#img{
-   background-color:#39CCCC;
 }
 body{
    font-family: serif;
