--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
    /* background-color: #ee3e80; */
-   background-color: #FF4136;
-   color: #0074D9;
+   background-color: #111111
+   color: white;
 
 }
 body{
