--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
    /* background-color: #ee3e80; */
-   background-color: #111111
-   color: white;
+   background-color: #111111;
+   color: #FFFFFF;
 
 }
 body{
@@ -11,6 +11,6 @@ body{
 h1{
    font-size: 40px;
    text-align: center;
-   
+
 
 }
